Refactored List implementation to use LinkedList with getFirst() and getLast() methods. Updated readme.